# schuylkill

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
schuylkill/: __init__.py  exact.py  fuzzy.py  tf_idf.py  utils.py
schuylkill/tests/: test_exact.py  test_fuzzy.py  test_utils.py
