[tool.poetry]
name = "schuylkill"
version = "0.1.2"
description = "Fixing human errors by matching those hard-to-spell words"
authors = ["Nick Hand <nick.hand@phila.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.3"
fuzzywuzzy = "0.18.0"
scikit-learn = "^1.0"
sparse-dot-topn = "^0.3.1"
python-levenshtein = "0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coveralls = "^3.2.0"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
